--- a/src/comp/style.css
+++ b/src/comp/style.css
@@ -69,7 +69,9 @@ header{
     letter-spacing: 1px;
 }
 
-
+#sizedescription {
+display: inline-flex;
+}
 .add-btn {
     cursor: pointer;
     border-radius: 5px;
